--- a/app/templates/Inventory.html
+++ b/app/templates/Inventory.html
@@ -7,6 +7,7 @@
 <table id="InventoryTable" class="table table-striped">
     <thead>
         <tr>
+            <th></th>
             <th>ProductCode</th>
             <th>On hand</th>
             <th>Blocked</th>
@@ -17,6 +18,7 @@
     <tbody>
         {% for row in data %}
         <tr>
+            <td><img src="{{ row['image'] }}" width="64" /></td>
             <td>{{ row[0] }}</td>
             <td>{{ row[1] }}</td>
             <td>{{ row[2] }}</td>
