--- a/app/templates/ProductionOrderprogress.html
+++ b/app/templates/ProductionOrderprogress.html
@@ -1,46 +1,64 @@
 {% extends "base.html" %}
 {% block title %}Production Order Details{% endblock %}
 {% block content %}
-    <h2 class="text-center my-3">Production Order Details</h2>
-    <p>Product: {{ order["ProductCode"] }}</p>
-    <p>Order date: {{ order["OrderDate"] }}</p>
-    <p>Quantity: {{ order["QuantityCompleted"] }}/{{ order["Quantity"] }}</p>
-    <p>Status: {{ order["Status"] }}</p>
-    <a href="{{ url_for('production.increase_ProductionOrder', OrderID=order['OrderID']) }}" class="btn btn-success mb-3">+</a>
-    <a href="{{ url_for('production.decrease_ProductionOrder', OrderID=order['OrderID']) }}" class="btn btn-danger mb-3">-</a>                
-    <a href="{{ url_for('production.complete_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-primary mb-3"> Mark as Complete</a>
-    <a href="{{ url_for('production.ongoing_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-primary mb-3"> Mark as On going</a>
-    <table id="ProductionOrderTable" class="table table-striped">
-        <thead>
-            <tr>
-                <th>ProductCode</th>
-                <th>Category</th>
-                <th>Quantity</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in data %}
-            <tr>
-                <td>{{ row["ProductCode"] }}</td>
-                <td>{{ row["Category"] }}</td>
-                <td>{{ row["QuantityCompleted"] }}/{{ row["QuantityRequired"] }}</td>
-                <td>
-                    <a href="{{ url_for('progress.increase_ProductionOrderProgress', ProgressID=row[0], OrderID=order['OrderID']) }}" class="btn btn-success btn-sm">+</a>
-                    <a href="{{ url_for('progress.decrease_ProductionOrderProgress', ProgressID=row[0], OrderID=order['OrderID']) }}" class="btn btn-danger btn-sm">-</a>
-                    {% if row[6] == "Subassembly" %}
-                        {% if row[7] %}
-                            <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row[7]) }}" class="btn btn-primary btn-sm">View Production order</a>
-                        {% else %}
-                            <a href="{{ url_for('production.add_ProductionOrder', date=current_date, code=row[2], quantity=(row[3] - row[4]), parentOrderID=order['OrderID']) }}" class="btn btn-primary btn-sm">Add Production order</a>
-                        {% endif %}    
-                    {% endif %}
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    
-    {% include 'datatable_setup.html' %}
-    
+<h2 class="text-center my-3">Production Order Details</h2>
+<div class="container">
+    <div class="row mb-3">
+        <div class="col-2">
+            <img src="{{ order['image'] }}" width="100%" />
+        </div>
+        <div class="col">
+            <p>Product: {{ order["ProductCode"] }}</p>
+            <p>Order date: {{ order["OrderDate"] }}</p>
+            <p>Quantity: {{ order["QuantityCompleted"] }}/{{ order["Quantity"] }}</p>
+            <p>Status: {{ order["Status"] }}</p>
+
+        </div>
+    </div>
+</div>
+<a href="{{ url_for('production.increase_ProductionOrder', OrderID=order['OrderID']) }}"
+    class="btn btn-success mb-3">+</a>
+<a href="{{ url_for('production.decrease_ProductionOrder', OrderID=order['OrderID']) }}"
+    class="btn btn-danger mb-3">-</a>
+<a href="{{ url_for('production.complete_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-primary mb-3">
+    Mark as Complete</a>
+<a href="{{ url_for('production.ongoing_ProductionOrder', OrderID=order['OrderID'])}}" class="btn btn-primary mb-3">
+    Mark as On going</a>
+<table id="ProductionOrderTable" class="table table-striped">
+    <thead>
+        <tr>
+            <th>ProductCode</th>
+            <th>Category</th>
+            <th>Quantity</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for row in data %}
+        <tr>
+            <td>{{ row["ProductCode"] }}</td>
+            <td>{{ row["Category"] }}</td>
+            <td>{{ row["QuantityCompleted"] }}/{{ row["QuantityRequired"] }}</td>
+            <td>
+                <a href="{{ url_for('progress.increase_ProductionOrderProgress', ProgressID=row[0], OrderID=order['OrderID']) }}"
+                    class="btn btn-success btn-sm">+</a>
+                <a href="{{ url_for('progress.decrease_ProductionOrderProgress', ProgressID=row[0], OrderID=order['OrderID']) }}"
+                    class="btn btn-danger btn-sm">-</a>
+                {% if row[6] == "Subassembly" %}
+                {% if row[7] %}
+                <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row[7]) }}"
+                    class="btn btn-primary btn-sm">View Production order</a>
+                {% else %}
+                <a href="{{ url_for('production.add_ProductionOrder', date=current_date, code=row[2], quantity=(row[3] - row[4]), parentOrderID=order['OrderID']) }}"
+                    class="btn btn-primary btn-sm">Add Production order</a>
+                {% endif %}
+                {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+{% include 'datatable_setup.html' %}
+
 {% endblock %}
