--- a/app/templates/Product.html
+++ b/app/templates/Product.html
@@ -17,7 +17,7 @@
     <tbody>
         {% for row in data %}
         <tr>
-            <td><img src="{{ row['image'] }}" width="128" /></td>
+            <td><img class="rounded" src="{{ row['image'] }}" width="128" /></td>
             <td>{{ row["ProductCode"] }}</td>
             <td>{{ row["Category"] }}</td>
             <td>
