--- a/app/templates/ProductionOrderprogress.html
+++ b/app/templates/ProductionOrderprogress.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row mb-3">
         <div class="col-2">
-            <img src="{{ order['image'] }}" width="100%" />
+            <img class="rounded" src="{{ order['image'] }}" width="100%" />
         </div>
         <div class="col">
             <p>Product: {{ order["ProductCode"] }}</p>
