--- a/app/templates/Inventory.html
+++ b/app/templates/Inventory.html
@@ -18,7 +18,7 @@
     <tbody>
         {% for row in data %}
         <tr>
-            <td><img src="{{ row['image'] }}" width="64" /></td>
+            <td><img class="rounded" src="{{ row['image'] }}" width="64" /></td>
             <td>{{ row[0] }}</td>
             <td>{{ row[1] }}</td>
             <td>{{ row[2] }}</td>
