--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="/">
-                    <img src="{{ url_for('static', filename = 'logo.png') }}" alt="Bootstrap" width="42" height="42">
+                    <img class="rounded" src="{{ url_for('static', filename = 'logo.png') }}" alt="Bootstrap" width="42" height="42">
                     RaspERP
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
