--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
-    <img src="{{ url_for('static', filename = 'logo.png') }}" class="rounded mx-auto d-block" width="200">
+    <img class="rounded" src="{{ url_for('static', filename = 'logo.png') }}" class="rounded mx-auto d-block" width="200">
     <h1 class="text-center">Welcome to RaspERP</h1>
     <p class="text-muted text-center">Manage your warehouse and orders easily.</p>
 {% endblock %}
