--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,58 @@
 {% extends "base.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
-    <img class="rounded" src="{{ url_for('static', filename = 'logo.png') }}" class="rounded mx-auto d-block" width="200">
+<img src="{{ url_for('static', filename = 'logo.png') }}" class="rounded mx-auto d-block" width="200">
+<div class="container-fluid mb-4">
     <h1 class="text-center">Welcome to RaspERP</h1>
     <p class="text-muted text-center">Manage your warehouse and orders easily.</p>
+</div>
+<div class="container-fluid text-center">
+    <div class="row">
+        <div class="col">
+            <h3 class="mb-3">Missing parts on Current Orders</h3>
+            <table id="DashboardOnGoingTable" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Missing</th>
+                        <th>Category</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for row in ordersOnGoing %}
+                    <tr>
+                        <td>{{ row["ProductCode"] }}</td>
+                        <td>{{ row["QuantityRequired"] - row["QuantityCompleted"] }}</td>
+                        <td>{{ row["Category"] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div class="col">
+            <h3 class="mb-3">Missing parts on Planned Orders</h3>
+            <table id="DashboardOnGoingTable" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Missing</th>
+                        <th>Category</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for row in ordersPlanned %}
+                    <tr>
+                        <td>{{ row["ProductCode"] }}</td>
+                        <td>{{ row["QuantityRequired"] - row["QuantityCompleted"] }}</td>
+                        <td>{{ row["Category"] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+{% include 'datatable_setup.html' %}
+
 {% endblock %}
