fix auto increase quantity on production order progress

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,13 +45,13 @@
 
     <footer class="bg-dark text-light text-center py-3 mt-5">
         <div class="container">
-            <div class="collapse mb-3" id="collapseExample">
+            <div class="collapse mb-3" id="collapseLogs">
                 <div class="card card-body text-start" id="LogsContainer">
                 </div>
             </div>
             <p class="text-end">
-                <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#collapseExample" role="button"
-                    aria-expanded="false" aria-controls="collapseExample">
+                <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#collapseLogs" role="button"
+                    aria-expanded="false" aria-controls="collapseLogs">
                     Logs
                 </a>
             </p>
