--- a/app/templates/Inventory_codereader.html
+++ b/app/templates/Inventory_codereader.html
@@ -31,6 +31,10 @@
             transition: opacity 0.5s ease-in-out;
             width: 90%;
         }
+     
+        * {
+            cursor: none;
+        }
     </style>
 </head>
 
