add product view and Edit

--- a/app/templates/Product.html
+++ b/app/templates/Product.html
@@ -21,7 +21,9 @@
             <td>{{ row["ProductCode"] }}</td>
             <td>{{ row["Category"] }}</td>
             <td>
-                <a href="{{ url_for('product.delete_Product', code=row['ProductCode']) }}" class="btn btn-danger btn-sm">Delete</a>
+                <a href="{{ url_for('product.view_Product_detail', code=row['ProductCode']) }}" class="btn btn-info btn-sm">View</a>
+                <a href="{{ url_for('product.edit_Product', code=row['ProductCode']) }}" class="btn btn-warning btn-sm">Edit</a>
+                <a href="{{ url_for('product.delete_Product', code=row['ProductCode']) }}" class="btn btn-danger btn-sm">Delete</a>                
             </td>
         </tr>
         {% endfor %}
