--- a/app/templates/Product_add.html
+++ b/app/templates/Product_add.html
@@ -16,7 +16,7 @@
                 <input type="text" id="ProductCode" name="ProductCode" list="productCodes" class="form-control" required>
                 <datalist id="productCodes">
                     {% for row in product_codes %}
-                        <option value="{{ row[0] }}">
+                        <option value="{{ row['ProductCode'] }}">
                     {% endfor %}
                 </datalist>
             </div>
