--- a/app/templates/ProductionOrderprogress.html
+++ b/app/templates/ProductionOrderprogress.html
@@ -40,16 +40,16 @@
             <td>{{ row["Category"] }}</td>
             <td>{{ row["QuantityCompleted"] }}/{{ row["QuantityRequired"] }}</td>
             <td>
-                <a href="{{ url_for('progress.increase_ProductionOrderProgress', ProgressID=row[0], OrderID=order['OrderID']) }}"
+                <a href="{{ url_for('progress.increase_ProductionOrderProgress', ProgressID=row['ProgressID'], OrderID=order['OrderID']) }}"
                     class="btn btn-success btn-sm">+</a>
-                <a href="{{ url_for('progress.decrease_ProductionOrderProgress', ProgressID=row[0], OrderID=order['OrderID']) }}"
+                <a href="{{ url_for('progress.decrease_ProductionOrderProgress', ProgressID=row['ProgressID'], OrderID=order['OrderID']) }}"
                     class="btn btn-danger btn-sm">-</a>
-                {% if row[6] == "Subassembly" %}
-                {% if row[7] %}
-                <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row[7]) }}"
+                {% if row['Category'] == "Subassembly" %}
+                {% if row['childOrderID'] %}
+                <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['childOrderID']) }}"
                     class="btn btn-primary btn-sm">View Production order</a>
                 {% else %}
-                <a href="{{ url_for('production.add_ProductionOrder', date=current_date, code=row[2], quantity=(row[3] - row[4]), parentOrderID=order['OrderID']) }}"
+                <a href="{{ url_for('production.add_ProductionOrder', date=current_date, code=row['ProductCode'], quantity=(row['QuantityRequired'] - row['QuantityCompleted']), parentOrderID=order['OrderID']) }}"
                     class="btn btn-primary btn-sm">Add Production order</a>
                 {% endif %}
                 {% endif %}
