--- a/app/templates/ProductionOrder.html
+++ b/app/templates/ProductionOrder.html
@@ -26,9 +26,9 @@
             <td>{{ row["QuantityCompleted"] }}/{{ row["Quantity"] }}</td>
             <td>{{ row["Status"] }}</td>
             <td>
-                <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row[0]) }}"
+                <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['OrderID']) }}"
                     class="btn btn-info btn-sm">View</a>
-                <a href="{{ url_for('production.delete_ProductionOrder', OrderID=row[0]) }}"
+                <a href="{{ url_for('production.delete_ProductionOrder', OrderID=row['OrderID']) }}"
                     class="btn btn-danger btn-sm">Delete</a>
             </td>
         </tr>
@@ -67,7 +67,7 @@
                 <td>{{ row["QuantityCompleted"] }}/{{ row["Quantity"] }}</td>
                 <td>{{ row["Status"] }}</td>
                 <td>
-                    <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row[0]) }}"
+                    <a href="{{ url_for('progress.view_ProductionOrderProgress', OrderID=row['OrderID']) }}"
                         class="btn btn-info btn-sm">View</a>
                 </td>
             </tr>
