--- a/app/templates/ProductionOrder_add.html
+++ b/app/templates/ProductionOrder_add.html
@@ -13,7 +13,7 @@
                 <input type="text" id="code" name="ProductCode" list="productCodes" value="{{ ProductCode }}" class="form-control" required>
                 <datalist id="productCodes">
                     {% for row in product_codes %}
-                        <option value="{{ row[0] }}">
+                        <option value="{{ row['ProductCode'] }}">
                     {% endfor %}
                 </datalist>
             </div>
