add product graphs

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,7 @@
                                 href="{{ url_for('product.view_Product') }}">Products</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('bom.view_BillOfMaterials') }}">Bill
                                 of materials</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('bom.graphs_BillOfMaterials') }}">Products Graph</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('metadata.view_Metadata') }}">Metadata</a></li>
                     </ul>
                 </div>
